--- a/main.html.in
+++ b/main.html.in
@@ -56,7 +56,7 @@
   <script type="text/javascript" src="bld/main-all.js" defer></script>
 </head>
 
-<body>
+<body class="size-var">
   <div id="pageContainer">
     <!-- #if CONSOLE == "true" -->
       <pre id="consoleContainer"></pre>
@@ -238,10 +238,10 @@
         <button id="sampleCounters1">One sample for 1s</button>
         <button id="sampleCounters2">One sample for 100ms (2s)</button>
         <select id="canvasSize">
-          <option value="" selected>Display size: 240x320</option>
-          <option value="size-320x240">Display size: 320x240</option>
-          <option value="size-320x480">Display size: 320x480</option>
-          <option value="size-480x320">Display size: 480x320</option>
+          <option value="240x320" selected>Display size: 240x320</option>
+          <option value="320x240">Display size: 320x240</option>
+          <option value="320x480">Display size: 320x480</option>
+          <option value="480x320">Display size: 480x320</option>
         </select>
         <button id="start">Start</button>
 
