--- a/java/Makefile
+++ b/java/Makefile
@@ -1,3 +1,5 @@
+JAVA_VER ?= 1.3
+
 SRC_DIRS=cldc1.1.1 vm midp custom
 JPP_DEFS=-DENABLE_JSR_205 -DENABLE_SSL -DENABLE_PUBLICKEYSTORE -DENABLE_JSR_211 -DENABLE_MULTIPLE_ISOLATES -DRECORD -DUSE_FILE_CONNECTION -DENABLE_JSR_234
 
